# visiongl

./: .gitignore  CMakeLists.txt  Makefile  Makefile_linux  README.txt  cl2cpp.pl  cl2cpp_MM.cpp  cl2cpp_MM.h  common.pm  debug.txt  get_images.sh  glsl2cpp.pl  kernel2cu.pl  visiongl.dox
cmake-modules/: CMakeLists.txt  FindGLEW.cmake  FindMyFREEGLUT.cmake  FindMyGLEW.cmake  FindMyOpenCL.cmake  FindMyOpenCV.cmake  FindOpenCV.cmake
images/: E1154S7I-001.tif  E1154S7I-002.tif  E1154S7I-003.tif  E1154S7I-006.tif  README.txt  lena_1024.tif  lena_gray.tif  lena_gray_1024.tif  lenaout_blur33.tif  lenaout_conv55.tif  lenaout_download.tif  lenaout_erosion.tif  lenaout_invert.tif  lenaout_rgbtogray.tif  lenaout_rgbtorgba.tif  retina.tif  test_conway.pgm  test_mm.pgm
images/dicom/: 0003.dcm.0.PGM  0003.dcm.1.PGM  0003.dcm.10.PGM  0003.dcm.11.PGM  0003.dcm.12.PGM  0003.dcm.13.PGM  0003.dcm.14.PGM  0003.dcm.15.PGM  0003.dcm.16.PGM  0003.dcm.2.PGM  0003.dcm.3.PGM  0003.dcm.4.PGM  0003.dcm.5.PGM  0003.dcm.6.PGM  0003.dcm.7.PGM  0003.dcm.8.PGM  0003.dcm.9.PGM  1.3.46.670589.6.1.0.98511171.2001010909322347.dcm  E1154S7I.dcm  I_000003.dcm.0.PGM  I_000003.dcm.1.PGM  I_000003.dcm.10.PGM  I_000003.dcm.11.PGM  I_000003.dcm.12.PGM  I_000003.dcm.13.PGM  I_000003.dcm.14.PGM  I_000003.dcm.15.PGM  I_000003.dcm.16.PGM  I_000003.dcm.2.PGM  I_000003.dcm.3.PGM  I_000003.dcm.4.PGM  I_000003.dcm.5.PGM  I_000003.dcm.6.PGM  I_000003.dcm.7.PGM  I_000003.dcm.8.PGM  I_000003.dcm.9.PGM  cardio.dcm
images/tif/: E1154S7I_004.tif  E1154S7I_005.tif  E1154S7I_007.tif  E1154S7I_3d.tif
include/: visiongl.h
perlModules/: cl2cloud.pl  cl2cpp.pl  common.pm  glsl2cpp.pl  kernel2cu.pl
src/: cl2cpp_BIN.cpp  cl2cpp_BIN.h  cl2cpp_MM.cpp  cl2cpp_MM.h  cl2cpp_ND.cpp  cl2cpp_ND.h  cl2cpp_shaders.cpp  cl2cpp_shaders.h  glsl2cpp_BG.cpp  glsl2cpp_BG.h  glsl2cpp_DiffEq.cpp  glsl2cpp_DiffEq.h  glsl2cpp_Stereo.cpp  glsl2cpp_Stereo.h  glsl2cpp_shaders.cpp  glsl2cpp_shaders.h  iplImage.cpp  iplImage.h  kernel2cu_shaders.cu  kernel2cu_shaders.h  kernel2cu_shaders.kernel  personal_cl_functions.cpp  personal_cl_functions.h  vglCLImage.cl  vglCLImage.h  vglClFunctions.cpp  vglClFunctions.h  vglClImage.cpp  vglClImage.h  vglClShape.h  vglClStrEl.h  vglConst.h  vglContext.cpp  vglContext.h  vglCudaImage.cu  vglCudaImage.h  vglDcmtkFile.cpp  vglDcmtkFile.h  vglDcmtkIo.cpp  vglDcmtkIo.h  (+22 more)
src/CL/: roottest._cl  vglCl3dBlurSq3.cl  vglCl3dConvolution.cl  vglCl3dCopy.cl  vglCl3dDilate.cl  vglCl3dErode.cl  vglCl3dErosion.cl  vglCl3dMax.cl  vglCl3dMergeZByMax.cl  vglCl3dMergeZByMean.cl  vglCl3dMin.cl  vglCl3dNot.cl  vglCl3dSub.cl  vglCl3dSum.cl  vglCl3dThreshold.cl  vglClBlurSq3.cl  vglClConvolution._cl  vglClConvolution.cl  vglClCopy.cl  vglClDilate.cl  vglClErode.cl  vglClErosion.cl  vglClFuzzyArithDilation.cl  vglClFuzzyArithErosion.cl  vglClFuzzyBoundDilation.cl  vglClFuzzyBoundErosion.cl  vglClFuzzyDaPDilation.cl  vglClFuzzyDrasticErosion.cl  vglClFuzzyGeoDilation.cl  vglClFuzzyHamacherErosion.cl  vglClInvert.cl  vglClMax.cl  vglClMin.cl  vglClNdNot.cl  vglClSub.cl  vglClSum.cl  vglClSwapRgb.cl  vglClThreshold.cl  vglConvolution.cl  vglCopy.cl  (+2 more)
src/CL_BIN/: vglCl3dBinCopy.cl  vglCl3dBinDilate.cl  vglCl3dBinDilatePack.cl  vglCl3dBinErode.cl  vglCl3dBinErodePack.cl  vglCl3dBinMax.cl  vglCl3dBinMin.cl  vglCl3dBinNot.cl  vglCl3dBinRoi.cl  vglCl3dBinSub.cl  vglCl3dBinSwap.cl  vglCl3dBinThreshold.cl  vglCl3dBinToGray.cl  vglClBinConway.cl  vglClBinCopy.cl  vglClBinDilate.cl  vglClBinDilatePack.cl  vglClBinErode.cl  vglClBinErodePack.cl  vglClBinMax.cl  vglClBinMin.cl  vglClBinNot.cl  vglClBinRoi.cl  vglClBinSub.cl  vglClBinSwap.cl  vglClBinThreshold.cl  vglClBinToGray.cl  vglClNdBinCopy.cl  vglClNdBinDilate.cl  vglClNdBinDilatePack.cl  vglClNdBinErode.cl  vglClNdBinErodePack.cl  vglClNdBinMax.cl  vglClNdBinMin.cl  vglClNdBinNot.cl  vglClNdBinRoi.cl  vglClNdBinSub.cl  vglClNdBinSwap.cl  vglClNdBinThreshold.cl  vglClNdBinToGray.cl  (+2 more)
src/CL_MM/: vglCl3dFuzzyAlgDilate.cl  vglCl3dFuzzyAlgErode.cl  vglCl3dFuzzyArithDilate.cl  vglCl3dFuzzyArithErode.cl  vglCl3dFuzzyBoundDilate.cl  vglCl3dFuzzyBoundErode.cl  vglCl3dFuzzyDaPDilate.cl  vglCl3dFuzzyDaPErode.cl  vglCl3dFuzzyDrasticDilate.cl  vglCl3dFuzzyDrasticErode.cl  vglCl3dFuzzyGeoDilate.cl  vglCl3dFuzzyGeoErode.cl  vglCl3dFuzzyHamacherDilate.cl  vglCl3dFuzzyHamacherErode.cl  vglCl3dFuzzyStdDilate.cl  vglCl3dFuzzyStdErode.cl  vglClFuzzyAlgDilate.cl  vglClFuzzyAlgDilation.cl  vglClFuzzyAlgErode.cl  vglClFuzzyAlgErosion.cl  vglClFuzzyArithDilate.cl  vglClFuzzyArithErode.cl  vglClFuzzyArithErosion.cl  vglClFuzzyBoundDilate.cl  vglClFuzzyBoundErode.cl  vglClFuzzyDaPDilate.cl  vglClFuzzyDaPErode.cl  vglClFuzzyDaPErosion.cl  vglClFuzzyDrasticDilate.cl  vglClFuzzyDrasticDilation.cl  vglClFuzzyDrasticErode.cl  vglClFuzzyGeoDilate.cl  vglClFuzzyGeoErode.cl  vglClFuzzyHamacherDilate.cl  vglClFuzzyHamacherErode.cl  vglClFuzzyStdDilate.cl  vglClFuzzyStdErode.cl
src/CL_ND/: vglClNdConvolution.cl  vglClNdCopy.cl  vglClNdDilate.cl  vglClNdErode.cl  vglClNdNot.cl  vglClNdThreshold.cl  vglClShape.h
src/CL_UTIL/: vglClEqual.cl  vglClHistogram.cl  vglClHistogramEq.cl  vglClLevelSetMethod.cl  vglClMath.cl
src/CUDA/: vglCudaCopy.kernel  vglCudaInvert.kernel  vglCudaInvertOnPlace.kernel
src/FS/: FS  shader_15_1.frag  vgl1to3Channels.frag  vgl3dNot.frag  vglAbsDiff.frag  vglAnd.frag  vglBaricenterInit.frag  vglBlurSq3.frag  vglClear2.frag  vglContrast.frag  vglCoordToColor.frag  vglCopy.frag  vglCrossingNumber.frag  vglDeleteSkeletonCorners.frag  vglDeleteSkeletonWarts.frag  vglDeleteSkeletonWarts2.frag  vglDiff.frag  vglDilateCross3.frag  vglDilateSq3.frag  vglErodeCross3.frag  vglErodeHL3.frag  vglErodeHL5.frag  vglErodeHL7.frag  vglErodeSq3.frag  vglErodeSq3off.frag  vglErodeSq5.frag  vglErodeSq5off.frag  vglErodeSq7.frag  vglErodeSqSide.frag  vglErodeVL3.frag  vglErodeVL5.frag  vglErodeVL7.frag  vglFeaturePoints.frag  vglGaussianBlurSq3.frag  vglGray.frag  vglHorizontalFlip.frag  vglInOut.frag  vglJulia.frag  vglLaplaceSq3.frag  vglMandel.frag  (+38 more)
src/demo/itk/: CMakeLists.txt  benchmark100itk.txt  itk_benchmark.cpp
(+65 files in other folders)
